src/objects/Component__c.object
<CustomObject>
    <description>This Object will hold the basic information for the components that live in the parent asset.</description>
    <fields>
        <fullName>componentAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>componentAssetSN__c</fullName>
        <label>Asset SN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>componentAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>componentComponentSN__c</fullName>
        <description>Serial Number of itemized component</description>
        <label>Component SN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>componentDiskModel__c</fullName>
        <label>Disk Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>componentDiskSizeGB__c</fullName>
        <label>Disk Size (GB)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>componentExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>componentFirstASUP__c</fullName>
        <label>First ASUP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>componentInstallStatus__c</fullName>
        <label>Install Status</label>
        <picklist>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>componentLastStatusDate__c</fullName>
        <description>Date Time of last known status</description>
        <label>Last Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>componentManufacturer__c</fullName>
        <description>Manufacturer of commodity</description>
        <label>Manufacturer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>componentModel__c</fullName>
        <description>Model number of commodity</description>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>componentMostRecentASUP__c</fullName>
        <label>Most Recent ASUP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>componentType__c</fullName>
        <description>Commodity (HDD, SSD, etc…)</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>componentComponentSN__c</columns>
        <columns>componentAssetSN__c</columns>
        <columns>componentAccountId__c</columns>
        <columns>componentType__c</columns>
        <columns>componentModel__c</columns>
        <columns>componentMostRecentASUP__c</columns>
        <columns>componentAsset__c</columns>
        <columns>componentDiskModel__c</columns>
        <columns>componentDiskSizeGB__c</columns>
        <columns>componentManufacturer__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Com-{00000}</displayFormat>
        <label>Component</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <recordTypes>
        <fullName>Chassis</fullName>
        <active>true</active>
        <label>Chassis</label>
    </recordTypes>
    <recordTypes>
        <fullName>Controller</fullName>
        <active>true</active>
        <label>Controller</label>
    </recordTypes>
    <recordTypes>
        <fullName>HDD</fullName>
        <active>true</active>
        <label>HDD</label>
    </recordTypes>
    <recordTypes>
        <fullName>SSD</fullName>
        <active>true</active>
        <label>SSD</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>